# pfb-model-spec

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  cliff.toml  pyproject.toml  tbump.toml
.claude/rules/: architecture.md  component-model.md  python-standards.md  testing-and-ci.md
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  publish-container.yml  publish.yml  update-cabs.yml
docs/superpowers/plans/: 2026-06-02-modelspec-library.md
docs/superpowers/specs/: 2026-06-02-modelspec-library-extraction-design.md
src/pfb_model_spec/: __init__.py  _container_image.py
src/pfb_model_spec/cabs/: model2comps.yml  onboard.yml
src/pfb_model_spec/cli/: __init__.py  model2comps.py  onboard.py
src/pfb_model_spec/core/: __init__.py  model2comps.py  onboard.py
src/pfb_model_spec/utils/: __init__.py  fits.py  io.py
tests/: _synth.py  test_install.py  test_io.py  test_lightweight_import.py  test_model2comps.py  test_modelspec.py  test_roundtrip.py
