[project]
name = "pfb-model-spec"
version = "0.0.1"
description = "Model specification for pfb-imaging"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "landmanbester", email = "lbester@sarao.ac.za" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "hip-cargo>=0.2.2",
]

# Lightweight install (default):  pip install pfb-model-spec
#     Only pulls hip-cargo + typer. Suitable for cab consumers (e.g. stimela)
#     and for running commands via container fallback. Generated CLI wrappers
#     lazy-import core/, so when heavy deps are missing the wrapper drops into
#     run_in_container() automatically.
# Full install:                    pip install pfb-model-spec[full]
#     Adds the heavy runtime deps that core/ implementations need to execute
#     natively. Add new deps to the "full" extra below as you grow core/.
[project.optional-dependencies]
full = [
    "astropy",
    "numpy",
    "scipy",
    "sympy",
    "xarray",
    "zarr",
]

[project.urls]
Homepage = "https://github.com/landmanbester/pfb-model-spec"
Repository = "https://github.com/landmanbester/pfb-model-spec"
"Bug Tracker" = "https://github.com/landmanbester/pfb-model-spec/issues"

[project.scripts]
pfbspec = "pfb_model_spec.cli:app"

[build-system]
# NOTE: This uv_build constraint is intentionally aligned with hip-cargo's own pyproject.toml.
# If you bump uv_build in hip-cargo, update this template constraint to match.
requires = ["uv_build>=0.11.18,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Tests that take more time to run",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.9.0",
    "tbump>=6.11.0",
    "pre-commit>=4.0.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]
